fix: 상위 5개의 채팅내역을 조회하는 로직에서 리턴 객체 QnaPair로 변경